--- a/.github/workflows/maven-bulid.yml
+++ b/.github/workflows/maven-bulid.yml
@@ -13,21 +13,14 @@ jobs:
 
     runs-on: ubuntu-latest
 
-        steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Log in to Azure
-        uses: azure/login@v1
+    steps:
+      - name: Check out the repository
+        uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          creds: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-
-      - name: Build Docker image
-        run: docker build . -t hogwarts-artifacts-online-amaya-harris
-
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: hogwarts-artifacts-online-amaya-harris
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          images: hogwarts-artifacts-online-amaya-harris
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build and test with Maven
+        run: mvn --batch-mode package
